Add functions for add book, remove book from ui and from localStorage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <button type="submit" class="add-btn">Add</button>
       </form>
     </section>
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
