Refactor functions to classes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <section class="awesome-books">
       <h1>Awesome Books</h1>
       <div class="booksDiv"></div>
+      <hr class="hr--list" />
       <form class="addBookForm">
+        <h1 class="addBookForm__h1">Add a new book</h1>
         <input type="text" name="title" id="title" required />
         <input type="text" name="author" id="author" required />
         <button type="submit" class="add-btn">Add</button>
