Add functionality to the display of the pages, add css styles to match design

--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@
             <a href="#" class="awesome-books__nav-link nav__link--2">Add new</a>
           </li>
           <li class="awesome-books__nav-item">
-            <a href="#" class="awesome-books__nav-link">Contact</a>
+            <a href="#" class="awesome-books__nav-link nav__link--3">Contact</a>
           </li>
       </nav>
-      <div class="booksDiv"></div>
-      <form class="addBookForm">
+      <div class="books-container">
+        <h1 class="bookListH1 invisible">All Awesome Books</h1>
+
+        <div class="booksDiv invisible">
+          <div>
+          </div>
+        </div>
+      </div>
+        <form class="addBookForm">
         <h1 class="addBookForm__h1">Add a new book</h1>
         <input type="text" name="title" id="title" required />
         <input type="text" name="author" id="author" required />
         <button type="submit" class="add-btn">Add</button>
       </form>
+      <div class="contactPage invisible"></div>
     </section>
     <footer class="copyright">
       <p>Awesome Books &copy; 2021</p>
